Moved to new version stonewall, and added extra text.

--- a/indexdev.html
+++ b/indexdev.html
@@ -39,10 +39,7 @@
         data-name: location of main script for Application
         data-target?: location to container if not set, use document.body
     -->
-    <script data-name="App" data-target="body" src="node_modules/stonewalljs/dev/loader.js"></script>
-    <style>
-
-    </style>
+    <script data-name="App" data-target="body" data-dev="true" src="node_modules/stonewalljs/loader.js"></script>
 </head>
 <body>
 </body>
