--- a/src/basic/cmp/Cmp.html
+++ b/src/basic/cmp/Cmp.html
@@ -1,6 +1,7 @@
 <div class="container-fluid cmp">
     <style-less>
         img {
+            border: solid 2px #337ab7;
             width: 100%;
         }
     </style-less>
