--- a/src/code/_code.html
+++ b/src/code/_code.html
@@ -1,5 +1,7 @@
 <div>
     <style-less>
+        @import (inline) "./node_modules/highlight.js/styles/googlecode.css";
+
         code{
         }
         pre{
