--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         data-name: location to app
         data-target?: location to container if not set, use document.body
     -->
-    <script data-name="App" src="dist/bower_components/stonewall/dist/prod/loader.js"></script>
+    <script data-name="App" src="dist/target/loader.js"></script>
 
 </head>
 <body>
