Added comment for data-baseurl

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <!--
         data-name: location to app
         data-target?: location to container if not set, use document.body
+        data-baseurl?: location to baseUrl in requirejs.
     -->
     <script data-name="App" data-baseurl="dist/target/" src="dist/target/loader.js"></script>
 
