--- a/slides.html
+++ b/slides.html
@@ -137,12 +137,17 @@
             </section>
         </section>
         <section>
-            <div data-markdown class="col-md-12">
-                <script type="text/template">
-                    ## Reusable Components
-                    A paragraph with some text and a [link](http://hakim.se).
-                </script>
-            </div>
+            <section>
+                <div data-markdown class="col-md-12">
+                    <script type="text/template">
+                        ## Reusable Components
+                        * Any template as component
+                        * Using components
+                        * Placeholders
+                        * Attributes to components
+                    </script>
+                </div>
+            </section>
         </section>
         <section>
             <div data-markdown class="col-md-12">
